kubernetes/apps/gdd-plex/tdarr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  annotations:
    tailscale.com/proxy-group: ts-ingress
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media Management"
    gethomepage.dev/name: Tdarr
    gethomepage.dev/icon: tdarr.png
    gethomepage.dev/description: "Tailscale only | Transcode automation"
    gethomepage.dev/widget.type: tdarr
    gethomepage.dev/widget.url: "http://tdarr.gdd-plex.svc:8265"
spec:
  ingressClassName: tailscale
  rules:
    - host: tdarr.barn-walleye.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdarr
                port:
                  number: 8265
  tls:
    - hosts:
        - tdarr.barn-walleye.ts.net
